welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:16: error: not found: value anvance
    	anvance(4);
        ^