welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
var nbMotif : Int = 0
var nbCarre : Int = 0 // grand motif

def marquerSol() {
  baisseBrosse();
  leveBrosse();
}

def sePlacer() {
  if (nbCarre != 0) {
    if (nbCarre % 2 == 1){
    	avance(4);
  	} else {
    	recule(4);
    	gauche();
    	anvance(4);
    	droite();
  	}
  }
}

def motif1(c:Color) {
  setCouleurBrosse(c);
  avance();
  gauche();
  marquerSol();
  for (compteur <- 1 to 2) {
  	avance();
 	  gauche();
  }
  marquerSol();
  avance();
  gauche();
  nbMotif = nbMotif + 1;
}

def motif2(c:Color) {
  setCouleurBrosse(c);
  marquerSol();
  avance();
  gauche();
  avance();
  marquerSol();
  gauche();
  for (compteur <- 1 to 2) {
    avance();
  	gauche();
  }
  nbMotif = nbMotif + 1;
}

def carre() {
  motif1(Color.RED);
  avance(2);
  motif2(Color.BLUE);
  recule(2);
  gauche();
  avance(2);
  droite();
  motif2(Color.YELLOW);
  avance(2);
  motif1(Color.GREEN);
  recule(2);
  gauche();
  recule(2);
  droite();
  nbCarre = nbCarre + 1;
}

override def run() {
  for (compteur <- 1 to 3) {
    carre();
  	sePlacer();
  }
  carre();
}